--- a/src/main/docker/Dockercompose.yml
+++ b/src/main/docker/Dockercompose.yml
@@ -23,6 +23,20 @@ services:
     networks:
       - lucasfs-compose-network
 
+  app:
+    build:
+      context: ../../../
+      dockerfile: src/main/docker/Dockerfile.jvm
+    container_name: lucasfs-objective-app
+    environment:
+        QUARKUS_DATASOURCE_JDBC_URL: jdbc:postgresql://postgres/lucasfs_objective_db
+    ports:
+      - "8080:8080"
+    networks:
+      - lucasfs-compose-network
+    depends_on:
+      - postgres
+
 networks:
   lucasfs-compose-network:
     driver: bridge
